*SVN*

* Normalize classify's argument to a String so that it plays nice with Symbols. [Marcel Molina Jr.] 

* Strip out leading schema name in classify. References #5139. [schoenm@earthlink.net]

* Remove Enumerable#first_match since break(value) handles the use case well enough. [Nicholas Seckar]

  Enumerable#first_match was like detect, but instead of returning the matching element, the yielded value returned. For example:
  
    user_xml = adapters(:from => User, :to => Xml).first_match do |adapter|
      adapter.adapt @user
    end
  
  But this is just as easily done with:
  
    user_xml = adapters(:from => User, :to => Xml).each do
      break adapter.adapt(@user)
    end
  
* Make Array#in_groups_of just return the grouped collection if a block isn't given. [Marcel Molina Jr.] 

* Don't destroy a HashWithIndifferentAccess if symbolize_keys! or  stringify_keys! is called on it. Closes #5076. [Marcel Molina Jr., guy.naor@famundo.com]

* Document Module::delegate. #5002 [pergesu@gmail.com]

* Replace alias method chaining with Module#alias_method_chain. [Marcel Molina Jr.]

* Strip out punctuation on predicates or bang methods being aliased with alias_method_chain since target?_without_feature is not a valid method name. Add tests for Module#alias_method_chain. [Marcel Molina Jr.]

* Replace Ruby's deprecated append_features in favor of included. [Marcel Molina Jr.]

* Allow default options in with_options to be overridden. Closes #4480. [murphy@cYcnus.de] 

* Added Module#alias_method_chain [Jamis Buck]

* Updated to Builder 2.0 [DHH]

* Add Array#split for dividing arrays into one or more subarrays by value or block. [Sam Stephenson]

*1.3.1* (April 6th, 2006)

* Clean paths inside of exception messages and traces. [Nicholas Seckar]

* Add Pathname.clean_within for cleaning all the paths inside of a string. [Nicholas Seckar]
